--- a/reg_form.html
+++ b/reg_form.html
@@ -17,7 +17,7 @@
             <div class="col-lg-2 col-md-2 col-xs-12 "> </div>
             <div class="col-lg-8 col-md-8 col-xs-12 ghu">
               <h1 style=" margin-top:25px; color: white; font-weight:bolder; font-family:serif;">
-              <a href="index"><img src="/img/lmt.jpg" class="logo "alt=""></a>
+              <a href="home"><img src="/img/lmt.jpg" class="logo "alt=""></a>
 
                    SignUp
                   </h1>
