--- a/log_form.html
+++ b/log_form.html
@@ -18,7 +18,7 @@
             <div class="col-lg-2 col-md-2 col-xs-12 "> </div>
             <div class="col-lg-8 col-md-8 col-xs-12 ghu">
               <h1 style=" margin-top:25px; color: white; font-weight:bolder; font-family:serif;">
-              <a href="home"><img src="/img/lmt.jpg" class="logo "alt=""></a>
+              <a href="/"><img src="/img/lmt.jpg" class="logo "alt=""></a>
 
                    LOGIN
                   </h1>
