--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
                     <div class="col-8">
                         <div class="h-100">
                             <div class="academy-logo">
-                                <a href="home">
+                                <a href="/">
                                   <img src="https://fontmeme.com/permalink/200216/10843b6f348116246a3c9e1f6dde371e.png" alt="web-LOgo" class="logo-img" border="0"></a>
                             </div>
 
