Add more videos

--- a/home.html
+++ b/home.html
@@ -192,7 +192,7 @@
             <img class="card-img-top " src="/img/Algorithm.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Algorithm</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text">Its a semester 4 subject contains various algorithms.You willl learn new techniques.</p>
             </div>
             <div class="card-footer">
               <small class="text-muted"><i class="fas fa-user-tie ii"></i> 20 Students &nbsp <i class="fas fa-star ii"></i>5 Stars &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  <strike> ₹500</strike><span class="pop">  FREE</span> </small>
