--- a/home.html
+++ b/home.html
@@ -111,8 +111,9 @@
       <div class="carousel-item active">
           <div class="top-section-1">
            <div class="text-top">
-             <h2 class="h2-top"  >All the courses you need</h2>
-             <h1 class="h1-top"  >Welcome to our online university</h1>
+             <h1 class="h1-top"  >Welcome to Last Minute Tutorials</h1>
+             <h2 class="h2-top">All the Computer Science Core courses you need</h2>
+            
               <a href="/about" class="btn academy-btn">Read More</a>
            </div>
            </div>
@@ -120,8 +121,8 @@
       <div class="carousel-item">
           <div class="top-section-2">
            <div class="text-top">
-             <h2 class="h2-top">All the courses you need</h2>
-             <h1 class="h1-top">Welcome to our online university</h1>
+             <h1 class="h1-top">Welcome to Last Minute Tutorials</h1>
+             <h2 class="h2-top">All the Computer Science Core courses you need</h2>
               <a href="/about" class="btn academy-btn">Read More</a>
            </div>
            </div>
