--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
            <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
              <ul class="navbar-nav nav-pills">
                <li class="nav-item">
-                 <a class="nav-link" href=">">Home</a>
+                 <a class="nav-link" href="#">Home</a>
                </li>
                <li class="nav-item">
                  <a class="nav-link" href="/about">About</a>
@@ -113,7 +113,7 @@
            <div class="text-top">
              <h1 class="h1-top"  >Welcome to Last Minute Tutorials</h1>
              <h2 class="h2-top">All the Computer Science Core courses you need</h2>
-            
+
               <a href="/about" class="btn academy-btn">Read More</a>
            </div>
            </div>
