--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Caveat|Covered+By+Your+Grace|Damion|Sacramento&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Inline&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
     <link rel="stylesheet" href="/css/style.css">
     <script src="https://kit.fontawesome.com/cabe027d2f.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -31,6 +32,9 @@
 
 
       <nav class="navbar navbar-expand-lg navigation-section navitt" id="navi">
+        <div id="blok1">
+          <a href="/" class="w"> <img src="/img/favicon-32x32.png" alt=""> </a>
+        </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo">
           <span class="navbar-toggler-icon"><i class="fas fa-grip-lines"></i> </span>
         </button>
@@ -55,8 +59,11 @@
 
           </ul>
 
-        </div>
 
+        </div>
+     <div id="blok">
+       <a href="/log_form" class="we">Login</a> | <a href="/reg_form" class="we">Register</a>
+     </div>
 
       </nav>
 
