--- a/reg_form.html
+++ b/reg_form.html
@@ -8,6 +8,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script>
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.26.9/dist/sweetalert2.all.min.js"></script>
+        <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
       <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body>
@@ -18,7 +19,7 @@
             <div class="col-lg-2 col-md-2 col-xs-12 "> </div>
             <div class="col-lg-8 col-md-8 col-xs-12 ghu">
               <h1 style=" margin-top:25px; color: white; font-weight:bolder; font-family:serif;">
-              <a href="/"><img src="/img/lmt.jpg" class="logo "alt=""></a>
+              <a href="/"><img src="/img/lmt.png" class="logo "alt=""></a>
 
                    SignUp
                   </h1>
