--- a/log_form.html
+++ b/log_form.html
@@ -4,6 +4,7 @@
       <link rel="stylesheet" href="/css/log-style.css">
       <script src="https://kit.fontawesome.com/cabe027d2f.js" crossorigin="anonymous"></script>
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" ></script>
+        <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" ></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" ></script>
       <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
@@ -14,7 +15,7 @@
             <div class="col-lg-2 col-md-2 col-xs-12 "> </div>
             <div class="col-lg-8 col-md-8 col-xs-12 ghu">
               <h1 style=" margin-top:25px; color: white; font-weight:bolder; font-family:serif;">
-              <a href="/"><img src="/img/lmt.jpg" class="logo "alt=""></a>
+              <a href="/"><img src="/img/lmt.png" class="logo "alt=""></a>
 
                    LOGIN
                   </h1>
